@@ -1,4 +1,4 @@
-Copyright 2004-2009 Castle Project - http://www.castleproject.org/
+Copyright 2004-2010 Castle Project - http://www.castleproject.org/
  
 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
